--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
   <body>
+    <h1>William</h1>
+    <a href="https://github.com/Starvern">Visit profile.</a>
     <h1>UltimateUserInterface</h1>
+    <a href="https://github.com/Starvern/UltimateUserInterface">Visit repository.</a>
   </body>
 </html>
